@@ -1478,3 +1478,6 @@ worldpay_us:
   acctid: MPNAB
   subid: SPREE
   merchantpin: "1234567890"
+
+x_pay:
+  api_key: 2d708950-50a1-434e-9a93-5d3ae2f1dd9f
